# pydlx

./: .gitignore  LICENSE.md  README.md  pyproject.toml  test_dlx.py  test_pydlx.py
dancing_link/: __init__.py  algorithm.py  link.py  network.py  utility.py
dlx/: link.py  operations.py
example/: langford_pair.py  n_queens.py  skyscraper.py  sudoku.py  sumplete.py
example/skyscraper_tests/: 10_0.txt  11_0.txt  12_0.txt  13_0.txt  14_0.txt  15_0.txt  3_0.txt  4_0.txt  4_1.txt  5_0.txt  6_0.txt  7_0.txt  7_1.txt  8_0.txt  9_0.txt  9_1.txt  generator.py
example/sudoku_tests/: bad.txt  good.txt  multiple_solution.txt  sudoku_16_0.txt  sudoku_16_1.txt  sudoku_16_2.txt  sudoku_9_0.txt  sudoku_9_1.txt  sudoku_9_2.txt
example/sumplete_tests/: sumplete_3_0.txt  sumplete_4_0.txt  sumplete_5_0.txt  sumplete_6_0.txt  sumplete_7_0.txt  sumplete_8_0.txt  sumplete_9_0.txt  sumplete_9_1.txt
pydlx/: __init__.py  link.py  operations.py
test/: test_algorithm.py  test_link.py  test_network.py  test_operations.py  test_utility.py
