[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pydlx"
version = "0.0.1"
authors = [
  { name="Wee Hean Ng"},
]
description = "A Python implementation of Donald Knuth's Dancing Link Algorithm."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/nwhean/pydlx"
"Bug Tracker" = "https://github.com/nwhean/pydlx/issues"
